--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0",
     "sass": "^1.64.1"
   }
 }
